--- a/autoencoder.ipynb
+++ b/autoencoder.ipynb
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 65,
    "id": "73865457-77ff-4d9f-9f49-a5b8bd30de4a",
    "metadata": {
     "tags": []
@@ -578,11 +578,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
-      "2\n",
-      "75.0\n",
-      "1\n",
-      "150.0\n"
+      "2\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'Encoder' object has no attribute 'summary'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[65], line 10\u001b[0m\n\u001b[1;32m      6\u001b[0m model \u001b[38;5;241m=\u001b[39m Autoencoder(Encoder\u001b[38;5;241m=\u001b[39mencoder, Decoder\u001b[38;5;241m=\u001b[39mdecoder)\u001b[38;5;241m.\u001b[39mto(DEVICE)        \u001b[38;5;66;03m# GPU/TPU/... --> XPU\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# model.summary()\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m \u001b[43mencoder\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msummary\u001b[49m()\n\u001b[1;32m     11\u001b[0m decoder\u001b[38;5;241m.\u001b[39msummary()\n",
+      "File \u001b[0;32m~/anaconda3/envs/mace/lib/python3.9/site-packages/torch/nn/modules/module.py:1207\u001b[0m, in \u001b[0;36mModule.__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   <a href='file:///lhome/silkem/anaconda3/envs/mace/lib/python3.9/site-packages/torch/nn/modules/module.py?line=1204'>1205</a>\u001b[0m     \u001b[39mif\u001b[39;00m name \u001b[39min\u001b[39;00m modules:\n\u001b[1;32m   <a href='file:///lhome/silkem/anaconda3/envs/mace/lib/python3.9/site-packages/torch/nn/modules/module.py?line=1205'>1206</a>\u001b[0m         \u001b[39mreturn\u001b[39;00m modules[name]\n\u001b[0;32m-> <a href='file:///lhome/silkem/anaconda3/envs/mace/lib/python3.9/site-packages/torch/nn/modules/module.py?line=1206'>1207</a>\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m object has no attribute \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(\n\u001b[1;32m   <a href='file:///lhome/silkem/anaconda3/envs/mace/lib/python3.9/site-packages/torch/nn/modules/module.py?line=1207'>1208</a>\u001b[0m     \u001b[39mtype\u001b[39m(\u001b[39mself\u001b[39m)\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m, name))\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Encoder' object has no attribute 'summary'"
      ]
     }
    ],
@@ -594,7 +602,10 @@
     "\n",
     "model = Autoencoder(Encoder=encoder, Decoder=decoder).to(DEVICE)        # GPU/TPU/... --> XPU\n",
     "\n",
-    "# model.summary()\n"
+    "# model.summary()\n",
+    "\n",
+    "# encoder.summary()\n",
+    "# decoder.summary()\n"
    ]
   },
   {
