Implemented flexible amount of hidden layers

--- a/autoencoder.ipynb
+++ b/autoencoder.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 66,
    "id": "9ec97da6-acf4-4a3d-a245-1f33872a9118",
    "metadata": {
     "tags": []
@@ -183,16 +183,23 @@
     "    def __init__(self, input_dim, hidden_dim, latent_dim, nb_hidden = 1):\n",
     "        super(Encoder, self).__init__()\n",
     "\n",
+    "        print('Encoder')\n",
+    "        print('-------')\n",
+    "        print('# hidden layers:',nb_hidden)\n",
+    "\n",
     "        self.layer_in = nn.Linear( input_dim, hidden_dim)\n",
+    "        print('\\ninput layer: ', input_dim, hidden_dim)\n",
     "\n",
     "        self.hidden = list()\n",
     "        i=0\n",
     "        while ((i < nb_hidden) and (hidden_dim/2 > latent_dim)):\n",
-    "            self.layer = nn.Linear(hidden_dim, int(hidden_dim/2))\n",
+    "            self.layer = nn.Linear(hidden_dim, int(round(hidden_dim/2)))\n",
+    "            print('hidden layer:',hidden_dim, int(round(hidden_dim/2)))\n",
     "            self.hidden.append(self.layer)\n",
-    "            hidden_dim = int(hidden_dim/2)\n",
+    "            hidden_dim = int(round(hidden_dim/2))\n",
     "            i += 1\n",
     "        self.layer_out = nn.Linear(hidden_dim, latent_dim)\n",
+    "        print('output layer:', hidden_dim, latent_dim)\n",
     "        \n",
     "        self.LeakyReLU = nn.LeakyReLU(0.2)\n",
     "        \n",
@@ -203,9 +210,25 @@
     "        h = self.LeakyReLU(self.layer_out(h))\n",
     "        return h\n",
     "\n",
+    "    \n",
     "    def overview(self):\n",
-    "        input_nodes = print(self.layer_in.in_features)\n",
-    "        \n",
+    "        ## Retrieve the number of nodes in each layer\n",
+    "        input_nodes = self.layer_in.in_features\n",
+    "        hidden_nodes = list()\n",
+    "        for layer in self.hidden:\n",
+    "            hidden_nodes.append(layer.in_features)\n",
+    "        hidden_nodes.append(self.layer_out.in_features)\n",
+    "        output_nodes = self.layer_out.out_features\n",
+    "\n",
+    "        ## Calculate the number of parameters to be trained in each layer\n",
+    "        input_params = self.layer_in.out_features * (self.layer_in.in_features+1)\n",
+    "        hidden_params = list()\n",
+    "        for layer in self.hidden:\n",
+    "            hidden_params.append(layer.out_features * (layer.in_features+1))\n",
+    "        output_params = self.layer_out.out_features * (self.layer_out.in_features+1)\n",
+    "\n",
+    "        return (input_nodes, hidden_nodes, output_nodes), (input_params,hidden_params,output_params)\n",
+    "    \n",
     "        \n",
     "    \n",
     "    \n",
@@ -216,20 +239,26 @@
     "    def __init__(self, latent_dim, hidden_dim, output_dim, nb_hidden = 1):\n",
     "        super(Decoder, self).__init__()\n",
     "\n",
+    "        print('\\n\\nDecoder')\n",
+    "        print('-------')\n",
+    "        print('# hidden layers:',nb_hidden)\n",
     "        \n",
     "        self.hidden = list()\n",
     "        i = nb_hidden\n",
-    "        n = hidden_dim/(2*(nb_hidden-1))\n",
+    "        n = hidden_dim/(2**(nb_hidden))\n",
     "\n",
-    "        self.layer_in = nn.Linear( latent_dim, n)\n",
+    "        self.layer_in = nn.Linear( latent_dim,int(round(n)))\n",
+    "        print('\\ninput layer: ', latent_dim,int(round(n)))\n",
     "\n",
     "        while ((i > 0) and (n <= hidden_dim)):\n",
-    "            print(i,n)\n",
     "            self.layer = nn.Linear(int(round(n)), int(round(n*2)))\n",
+    "            print('hidden layer:',int(round(n)), int(round(n*2)))\n",
     "            self.hidden.append(self.layer)\n",
     "            i -= 1\n",
-    "            n = n*2\n",
+    "            n = n*2        \n",
+    "\n",
     "        self.layer_out = nn.Linear(hidden_dim, output_dim)\n",
+    "        print('output layer:', hidden_dim, output_dim)\n",
     "        \n",
     "        self.LeakyReLU = nn.LeakyReLU(0.2)\n",
     "        \n",
@@ -255,73 +284,6 @@
     "        h = self.Encoder(x)\n",
     "        h = self.Decoder(h)\n",
     "        return h"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "300 150\n",
-      "150 75\n"
-     ]
-    }
-   ],
-   "source": [
-    "nb_hidden = 2\n",
-    "hidden_dim = 300\n",
-    "latent_dim = 10\n",
-    "\n",
-    "i=0\n",
-    "while ((i < nb_hidden) and (hidden_dim/2 > latent_dim)):\n",
-    "    print(hidden_dim, int(hidden_dim/2))\n",
-    "    hidden_dim = int(hidden_dim/2)\n",
-    "    i += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2 75.0\n",
-      "____\n",
-      "\n",
-      "2\n",
-      "75.0\n",
-      "# nodes 75 150\n",
-      "----\n",
-      "1\n",
-      "150.0\n",
-      "# nodes 150 300\n",
-      "----\n"
-     ]
-    }
-   ],
-   "source": [
-    "hidden_dim = 300\n",
-    "nb_hidden = 2\n",
-    "\n",
-    "\n",
-    "i = nb_hidden\n",
-    "n = hidden_dim/(2*(nb_hidden))\n",
-    "print(i,n)\n",
-    "print('____\\n')\n",
-    "while ((i > 0) and (n <= hidden_dim)):\n",
-    "    print(i)\n",
-    "    print(n)\n",
-    "    print('# nodes',int(round(n)), int(round(n*2)))\n",
-    "    i -= 1\n",
-    "    n = n*2\n",
-    "    print('----')"
    ]
   },
   {
@@ -494,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +469,7 @@
     "hidden_dim = 300\n",
     "latent_dim = 10\n",
     "output_dim = input_dim\n",
-    "nb_hidden = 2\n",
+    "nb_hidden = 1\n",
     "\n",
     "## Set up training hyperparams\n",
     "batch_size = 100\n",
@@ -517,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 67,
    "id": "73865457-77ff-4d9f-9f49-a5b8bd30de4a",
    "metadata": {
     "tags": []
@@ -527,20 +489,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "468\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "empty() received an invalid combination of arguments - got (tuple, dtype=NoneType, device=NoneType), but expected one of:\n * (tuple of ints size, *, tuple of names names, torch.memory_format memory_format, torch.dtype dtype, torch.layout layout, torch.device device, bool pin_memory, bool requires_grad)\n * (tuple of ints size, *, torch.memory_format memory_format, Tensor out, torch.dtype dtype, torch.layout layout, torch.device device, bool pin_memory, bool requires_grad)\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[116], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m## Build model\u001b[39;00m\n\u001b[1;32m      3\u001b[0m encoder \u001b[38;5;241m=\u001b[39m Encoder( input_dim, hidden_dim, latent_dim, nb_hidden\u001b[38;5;241m=\u001b[39mnb_hidden)\n\u001b[0;32m----> 4\u001b[0m decoder \u001b[38;5;241m=\u001b[39m \u001b[43mDecoder\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlatent_dim\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mhidden_dim\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moutput_dim\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnb_hidden\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnb_hidden\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      6\u001b[0m model \u001b[38;5;241m=\u001b[39m Autoencoder(Encoder\u001b[38;5;241m=\u001b[39mencoder, Decoder\u001b[38;5;241m=\u001b[39mdecoder)\u001b[38;5;241m.\u001b[39mto(DEVICE)\n",
-      "Cell \u001b[0;32mIn[115], line 46\u001b[0m, in \u001b[0;36mDecoder.__init__\u001b[0;34m(self, latent_dim, hidden_dim, output_dim, nb_hidden)\u001b[0m\n\u001b[1;32m     43\u001b[0m i \u001b[38;5;241m=\u001b[39m nb_hidden\n\u001b[1;32m     44\u001b[0m n \u001b[38;5;241m=\u001b[39m hidden_dim\u001b[38;5;241m/\u001b[39m(\u001b[38;5;241m2\u001b[39m\u001b[38;5;241m*\u001b[39m(nb_hidden\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m))\n\u001b[0;32m---> 46\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlayer_in \u001b[38;5;241m=\u001b[39m \u001b[43mnn\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mLinear\u001b[49m\u001b[43m(\u001b[49m\u001b[43m \u001b[49m\u001b[43mlatent_dim\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     48\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m ((i \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m) \u001b[38;5;129;01mand\u001b[39;00m (n \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m hidden_dim)):\n\u001b[1;32m     49\u001b[0m     \u001b[38;5;28mprint\u001b[39m(i,n)\n",
-      "File \u001b[0;32m~/anaconda3/envs/mace/lib/python3.9/site-packages/torch/nn/modules/linear.py:96\u001b[0m, in \u001b[0;36mLinear.__init__\u001b[0;34m(self, in_features, out_features, bias, device, dtype)\u001b[0m\n\u001b[1;32m     <a href='file:///lhome/silkem/anaconda3/envs/mace/lib/python3.9/site-packages/torch/nn/modules/linear.py?line=93'>94</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39min_features \u001b[39m=\u001b[39m in_features\n\u001b[1;32m     <a href='file:///lhome/silkem/anaconda3/envs/mace/lib/python3.9/site-packages/torch/nn/modules/linear.py?line=94'>95</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mout_features \u001b[39m=\u001b[39m out_features\n\u001b[0;32m---> <a href='file:///lhome/silkem/anaconda3/envs/mace/lib/python3.9/site-packages/torch/nn/modules/linear.py?line=95'>96</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mweight \u001b[39m=\u001b[39m Parameter(torch\u001b[39m.\u001b[39;49mempty((out_features, in_features), \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mfactory_kwargs))\n\u001b[1;32m     <a href='file:///lhome/silkem/anaconda3/envs/mace/lib/python3.9/site-packages/torch/nn/modules/linear.py?line=96'>97</a>\u001b[0m \u001b[39mif\u001b[39;00m bias:\n\u001b[1;32m     <a href='file:///lhome/silkem/anaconda3/envs/mace/lib/python3.9/site-packages/torch/nn/modules/linear.py?line=97'>98</a>\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbias \u001b[39m=\u001b[39m Parameter(torch\u001b[39m.\u001b[39mempty(out_features, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mfactory_kwargs))\n",
-      "\u001b[0;31mTypeError\u001b[0m: empty() received an invalid combination of arguments - got (tuple, dtype=NoneType, device=NoneType), but expected one of:\n * (tuple of ints size, *, tuple of names names, torch.memory_format memory_format, torch.dtype dtype, torch.layout layout, torch.device device, bool pin_memory, bool requires_grad)\n * (tuple of ints size, *, torch.memory_format memory_format, Tensor out, torch.dtype dtype, torch.layout layout, torch.device device, bool pin_memory, bool requires_grad)\n"
+      "Encoder\n",
+      "-------\n",
+      "# hidden layers: 1\n",
+      "\n",
+      "input layer:  468 300\n",
+      "hidden layer: 300 150\n",
+      "output layer: 150 10\n",
+      "\n",
+      "\n",
+      "Decoder\n",
+      "-------\n",
+      "# hidden layers: 1\n",
+      "\n",
+      "input layer:  10 150\n",
+      "hidden layer: 150 300\n",
+      "output layer: 300 468\n"
      ]
     }
    ],
@@ -550,9 +514,27 @@
     "encoder = Encoder( input_dim, hidden_dim, latent_dim, nb_hidden=nb_hidden)\n",
     "decoder = Decoder(latent_dim, hidden_dim, output_dim, nb_hidden=nb_hidden)\n",
     "\n",
-    "model = Autoencoder(Encoder=encoder, Decoder=decoder).to(DEVICE)        # GPU/TPU/... --> XPU\n",
-    "\n",
-    "\n"
+    "model = Autoencoder(Encoder=encoder, Decoder=decoder).to(DEVICE)        # GPU/TPU/... --> XPU\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((468, [300, 150], 10), (140700, [45150], 1510))"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "encoder.overview()"
    ]
   },
   {
