Added print_overview function

--- a/autoencoder.ipynb
+++ b/autoencoder.ipynb
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 82,
    "id": "9ec97da6-acf4-4a3d-a245-1f33872a9118",
    "metadata": {
     "tags": []
@@ -210,27 +210,37 @@
     "        h = self.LeakyReLU(self.layer_out(h))\n",
     "        return h\n",
     "\n",
-    "    \n",
-    "    def overview(self):\n",
+    "\n",
+    "def overview(coder):\n",
     "        ## Retrieve the number of nodes in each layer\n",
-    "        input_nodes = self.layer_in.in_features\n",
+    "        input_nodes = coder.layer_in.in_features\n",
     "        hidden_nodes = list()\n",
-    "        for layer in self.hidden:\n",
+    "        for layer in coder.hidden:\n",
     "            hidden_nodes.append(layer.in_features)\n",
-    "        hidden_nodes.append(self.layer_out.in_features)\n",
-    "        output_nodes = self.layer_out.out_features\n",
+    "        hidden_nodes.append(coder.layer_out.in_features)\n",
+    "        output_nodes = coder.layer_out.out_features\n",
     "\n",
     "        ## Calculate the number of parameters to be trained in each layer\n",
-    "        input_params = self.layer_in.out_features * (self.layer_in.in_features+1)\n",
+    "        input_params = coder.layer_in.out_features * (coder.layer_in.in_features+1)\n",
     "        hidden_params = list()\n",
-    "        for layer in self.hidden:\n",
+    "        for layer in coder.hidden:\n",
     "            hidden_params.append(layer.out_features * (layer.in_features+1))\n",
-    "        output_params = self.layer_out.out_features * (self.layer_out.in_features+1)\n",
+    "        output_params = coder.layer_out.out_features * (coder.layer_out.in_features+1)\n",
     "\n",
     "        return (input_nodes, hidden_nodes, output_nodes), (input_params,hidden_params,output_params)\n",
+    "\n",
+    "def print_overview(coder):\n",
+    "    (input_nodes, hidden_nodes, output_nodes), (input_params,hidden_params,output_params) = overview(coder)\n",
     "    \n",
-    "        \n",
-    "    \n",
+    "    print('{:>8} | {:>5} | {:>10}'.format('#'  , 'nodes'    ,  'parameters'))\n",
+    "    print('-----------------------------------')\n",
+    "    print('{:>8} | {:>5} | {:>10}'.format('input'  ,   input_nodes,  input_params))\n",
+    "    for i in range(len(hidden_params)):\n",
+    "        print('{:>8} | {:>5} | {:>10}'.format('hidden'  ,   hidden_nodes[i],  hidden_params[i]))\n",
+    "    print('{:>8} | {:>5} | {:>10}'.format('hidden'  ,   hidden_nodes[i+1],  output_params))\n",
+    "    print('{:>8} | {:>5} | {:>10}'.format('output'  ,   output_nodes, '/'))\n",
+    "\n",
+    "    return\n",
     "    \n",
     "class Decoder(nn.Module):\n",
     "    \"\"\"\n",
@@ -479,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 70,
    "id": "73865457-77ff-4d9f-9f49-a5b8bd30de4a",
    "metadata": {
     "tags": []
@@ -519,22 +529,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "((468, [300, 150], 10), (140700, [45150], 1510))"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       # | nodes | parameters\n",
+      "-----------------------------------\n",
+      "   input |   468 |     140700\n",
+      "  hidden |   300 |      45150\n",
+      "  hidden |   150 |       1510\n",
+      "  output |    10 |          /\n"
+     ]
     }
    ],
    "source": [
-    "encoder.overview()"
+    "print_overview(encoder)"
    ]
   },
   {
