Overview ready + nb of parameters

--- a/autoencoder.ipynb
+++ b/autoencoder.ipynb
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 111,
    "id": "9ec97da6-acf4-4a3d-a245-1f33872a9118",
    "metadata": {
     "tags": []
@@ -180,26 +180,21 @@
     "    \"\"\"\n",
     "    Encoder network.\n",
     "    \"\"\"\n",
-    "    def __init__(self, input_dim, hidden_dim, latent_dim, nb_hidden = 1):\n",
+    "    def __init__(self, input_dim, hidden_dim, latent_dim, nb_hidden = 1, type = 'straight'):\n",
     "        super(Encoder, self).__init__()\n",
     "\n",
-    "        print('Encoder')\n",
-    "        print('-------')\n",
-    "        print('# hidden layers:',nb_hidden)\n",
-    "\n",
     "        self.layer_in = nn.Linear( input_dim, hidden_dim)\n",
-    "        print('\\ninput layer: ', input_dim, hidden_dim)\n",
-    "\n",
     "        self.hidden = list()\n",
-    "        i=0\n",
-    "        while ((i < nb_hidden) and (hidden_dim/2 > latent_dim)):\n",
-    "            self.layer = nn.Linear(hidden_dim, int(round(hidden_dim/2)))\n",
-    "            print('hidden layer:',hidden_dim, int(round(hidden_dim/2)))\n",
-    "            self.hidden.append(self.layer)\n",
-    "            hidden_dim = int(round(hidden_dim/2))\n",
-    "            i += 1\n",
+    "        if type == 'decr':\n",
+    "            i=0\n",
+    "            while ((i < nb_hidden) and (hidden_dim/2 > latent_dim)):\n",
+    "                self.layer = nn.Linear(hidden_dim, int(round(hidden_dim/2)))\n",
+    "                self.hidden.append(self.layer)\n",
+    "                hidden_dim = int(round(hidden_dim/2))\n",
+    "                i += 1\n",
+    "        # if type == 'straight':\n",
+    "\n",
     "        self.layer_out = nn.Linear(hidden_dim, latent_dim)\n",
-    "        print('output layer:', hidden_dim, latent_dim)\n",
     "        \n",
     "        self.LeakyReLU = nn.LeakyReLU(0.2)\n",
     "        \n",
@@ -210,35 +205,43 @@
     "        h = self.LeakyReLU(self.layer_out(h))\n",
     "        return h\n",
     "\n",
+    "    def set_name(self, name):\n",
+    "        self.name = name\n",
+    "        return\n",
+    "\n",
     "\n",
     "def overview(coder):\n",
-    "        ## Retrieve the number of nodes in each layer\n",
-    "        input_nodes = coder.layer_in.in_features\n",
-    "        hidden_nodes = list()\n",
-    "        for layer in coder.hidden:\n",
-    "            hidden_nodes.append(layer.in_features)\n",
-    "        hidden_nodes.append(coder.layer_out.in_features)\n",
-    "        output_nodes = coder.layer_out.out_features\n",
+    "    ## Retrieve the number of nodes in each layer\n",
+    "    input_nodes = coder.layer_in.in_features\n",
+    "    hidden_nodes = list()\n",
+    "    for layer in coder.hidden:\n",
+    "        hidden_nodes.append(layer.in_features)\n",
+    "    hidden_nodes.append(coder.layer_out.in_features)\n",
+    "    output_nodes = coder.layer_out.out_features\n",
     "\n",
-    "        ## Calculate the number of parameters to be trained in each layer\n",
-    "        input_params = coder.layer_in.out_features * (coder.layer_in.in_features+1)\n",
-    "        hidden_params = list()\n",
-    "        for layer in coder.hidden:\n",
-    "            hidden_params.append(layer.out_features * (layer.in_features+1))\n",
-    "        output_params = coder.layer_out.out_features * (coder.layer_out.in_features+1)\n",
+    "    ## Calculate the number of parameters to be trained in each layer\n",
+    "    input_params = coder.layer_in.out_features * (coder.layer_in.in_features+1)\n",
+    "    hidden_params = list()\n",
+    "    for layer in coder.hidden:\n",
+    "        hidden_params.append(layer.out_features * (layer.in_features+1))\n",
+    "    output_params = coder.layer_out.out_features * (coder.layer_out.in_features+1)\n",
     "\n",
-    "        return (input_nodes, hidden_nodes, output_nodes), (input_params,hidden_params,output_params)\n",
+    "    return (input_nodes, hidden_nodes, output_nodes), (input_params,hidden_params,output_params)\n",
     "\n",
     "def print_overview(coder):\n",
     "    (input_nodes, hidden_nodes, output_nodes), (input_params,hidden_params,output_params) = overview(coder)\n",
-    "    \n",
+    "    total_params = input_params + output_params\n",
+    "    print(str(coder.name)+':')\n",
     "    print('{:>8} | {:>5} | {:>10}'.format('#'  , 'nodes'    ,  'parameters'))\n",
     "    print('-----------------------------------')\n",
     "    print('{:>8} | {:>5} | {:>10}'.format('input'  ,   input_nodes,  input_params))\n",
     "    for i in range(len(hidden_params)):\n",
     "        print('{:>8} | {:>5} | {:>10}'.format('hidden'  ,   hidden_nodes[i],  hidden_params[i]))\n",
+    "        total_params += hidden_params[i]\n",
     "    print('{:>8} | {:>5} | {:>10}'.format('hidden'  ,   hidden_nodes[i+1],  output_params))\n",
     "    print('{:>8} | {:>5} | {:>10}'.format('output'  ,   output_nodes, '/'))\n",
+    "    print('-----------------------------------')\n",
+    "    print('{:>8} | {:>5} | {:>10}'.format(' ', ' ', total_params))\n",
     "\n",
     "    return\n",
     "    \n",
@@ -249,26 +252,16 @@
     "    def __init__(self, latent_dim, hidden_dim, output_dim, nb_hidden = 1):\n",
     "        super(Decoder, self).__init__()\n",
     "\n",
-    "        print('\\n\\nDecoder')\n",
-    "        print('-------')\n",
-    "        print('# hidden layers:',nb_hidden)\n",
-    "        \n",
     "        self.hidden = list()\n",
     "        i = nb_hidden\n",
     "        n = hidden_dim/(2**(nb_hidden))\n",
-    "\n",
     "        self.layer_in = nn.Linear( latent_dim,int(round(n)))\n",
-    "        print('\\ninput layer: ', latent_dim,int(round(n)))\n",
-    "\n",
     "        while ((i > 0) and (n <= hidden_dim)):\n",
     "            self.layer = nn.Linear(int(round(n)), int(round(n*2)))\n",
-    "            print('hidden layer:',int(round(n)), int(round(n*2)))\n",
     "            self.hidden.append(self.layer)\n",
     "            i -= 1\n",
     "            n = n*2        \n",
-    "\n",
     "        self.layer_out = nn.Linear(hidden_dim, output_dim)\n",
-    "        print('output layer:', hidden_dim, output_dim)\n",
     "        \n",
     "        self.LeakyReLU = nn.LeakyReLU(0.2)\n",
     "        \n",
@@ -278,6 +271,10 @@
     "            h = self.LeakyReLU(layer(h))\n",
     "        h = self.LeakyReLU(self.layer_out(h))\n",
     "        return h\n",
+    "\n",
+    "    def set_name(self, name):\n",
+    "        self.name = name\n",
+    "        return\n",
     "    \n",
     "    \n",
     "class Autoencoder(nn.Module):\n",
@@ -293,7 +290,11 @@
     "    def forward(self, x):\n",
     "        h = self.Encoder(x)\n",
     "        h = self.Decoder(h)\n",
-    "        return h"
+    "        return h\n",
+    "\n",
+    "    def set_name(self, name):\n",
+    "        self.name = name\n",
+    "        return"
    ]
   },
   {
@@ -466,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +480,7 @@
     "hidden_dim = 300\n",
     "latent_dim = 10\n",
     "output_dim = input_dim\n",
-    "nb_hidden = 1\n",
+    "nb_hidden = 2\n",
     "\n",
     "## Set up training hyperparams\n",
     "batch_size = 100\n",
@@ -489,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 102,
    "id": "73865457-77ff-4d9f-9f49-a5b8bd30de4a",
    "metadata": {
     "tags": []
@@ -501,18 +502,20 @@
      "text": [
       "Encoder\n",
       "-------\n",
-      "# hidden layers: 1\n",
+      "# hidden layers: 2\n",
       "\n",
       "input layer:  468 300\n",
       "hidden layer: 300 150\n",
-      "output layer: 150 10\n",
+      "hidden layer: 150 75\n",
+      "output layer: 75 10\n",
       "\n",
       "\n",
       "Decoder\n",
       "-------\n",
-      "# hidden layers: 1\n",
+      "# hidden layers: 2\n",
       "\n",
-      "input layer:  10 150\n",
+      "input layer:  10 75\n",
+      "hidden layer: 75 150\n",
       "hidden layer: 150 300\n",
       "output layer: 300 468\n"
      ]
@@ -522,31 +525,49 @@
     "## Build model\n",
     "\n",
     "encoder = Encoder( input_dim, hidden_dim, latent_dim, nb_hidden=nb_hidden)\n",
+    "encoder.set_name('Encoder')\n",
     "decoder = Decoder(latent_dim, hidden_dim, output_dim, nb_hidden=nb_hidden)\n",
-    "\n",
+    "decoder.set_name('Decoder')\n",
     "model = Autoencoder(Encoder=encoder, Decoder=decoder).to(DEVICE)        # GPU/TPU/... --> XPU\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Encoder:\n",
+      "\n",
       "       # | nodes | parameters\n",
       "-----------------------------------\n",
       "   input |   468 |     140700\n",
       "  hidden |   300 |      45150\n",
-      "  hidden |   150 |       1510\n",
-      "  output |    10 |          /\n"
+      "  hidden |   150 |      11325\n",
+      "  hidden |    75 |        760\n",
+      "  output |    10 |          /\n",
+      "-----------------------------------\n",
+      "         |       |     197935\n",
+      "Decoder:\n",
+      "\n",
+      "       # | nodes | parameters\n",
+      "-----------------------------------\n",
+      "   input |    10 |        825\n",
+      "  hidden |    75 |      11400\n",
+      "  hidden |   150 |      45300\n",
+      "  hidden |   300 |     140868\n",
+      "  output |   468 |          /\n",
+      "-----------------------------------\n",
+      "         |       |     198393\n"
      ]
     }
    ],
    "source": [
-    "print_overview(encoder)"
+    "print_overview(encoder)\n",
+    "print_overview(decoder)\n"
    ]
   },
   {
